fix: height of page on mobile

--- a/api/client/index.css
+++ b/api/client/index.css
@@ -6,8 +6,8 @@
   background-color: rgba(255, 255, 255, 0.87);
   color: #242424;
 
-  height: 100vh;
-  max-height: -webkit-fill-available;
+  min-height: -webkit-fill-available;
+  height: 100%;
   box-sizing: border-box;
 }
 
@@ -26,7 +26,7 @@ body {
   flex-direction: column;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100%;
 }
 
 h2 {
